feat: security hardening + performance optimization
Security hardening:
- Spring Security whitelist + JwtAuthenticationFilter
- VerificationCodeStore/RateLimitService migrated to Redis with memory fallback
- AI chat anonymous rate limiting (20 req/IP/day)
- JWT secret from env variable, prod profile separation
- Search input validation (@NotBlank @Size)
- Sensitive field double protection (@JsonIgnore + SensitiveFieldFilter)
- Admin endpoints (enrichment, knowledge, stale) require authentication
- Verification code no longer logged at info level

Performance optimization:
- GenericCacheService for API read caching
- PostEntity sort denormalization (viewCount, bookmarkCount, voteCount)
- Batch resolve for conversations and notifications
- DataMigrationRunner for fixing stale counters
- 540 tests all green